--- a/index.html
+++ b/index.html
@@ -3,38 +3,379 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>👽 Alien Encounter - First Contact</title>
+    <title>SATCORP | Concierge Creative Operations</title>
+    <meta name="description" content="End-to-end problem solver bridging design, automation, branding, and systems. Concierge-level execution for founders, creators, and brands.">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="stars"></div>
-    <div class="stars2"></div>
-    <div class="stars3"></div>
-    
-    <div class="container">
-        <header>
-            <div class="ufo">
-                <div class="ufo-top"></div>
-                <div class="ufo-bottom"></div>
-                <div class="beam"></div>
+    <!-- Navigation -->
+    <nav class="nav">
+        <div class="nav-container">
+            <div class="nav-logo">SATCORP</div>
+            <div class="nav-links">
+                <a href="#services" class="nav-link">Services</a>
+                <a href="#operations" class="nav-link">Operations</a>
+                <a href="#standard" class="nav-link">Standard</a>
+                <a href="#contact" class="nav-link nav-link-cta">Engage</a>
             </div>
-            <h1 class="glitch" data-text="ALIEN ENCOUNTER">ALIEN ENCOUNTER</h1>
-            <p class="tagline">First Contact Protocol Initiated</p>
-        </header>
+            <div class="nav-toggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+    </nav>
 
-        <main>
-            <section class="mission-control">
-                <h2>🛸 Mission Control</h2>
-                <div class="status-panel">
-                    <div class="status-item">
-                        <span class="label">Signal Strength:</span>
-                        <div class="progress-bar">
-                            <div class="progress" id="signal"></div>
-                        </div>
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-background"></div>
+        <div class="container">
+            <div class="hero-content">
+                <div class="hero-label">Concierge Creative Operations</div>
+                <h1 class="hero-title">
+                    <span class="title-line">End-to-End</span>
+                    <span class="title-line">Problem Solving</span>
+                </h1>
+                <p class="hero-subtitle">Bridging design · automation · branding · systems</p>
+                <div class="hero-stats">
+                    <div class="stat">
+                        <div class="stat-number">5</div>
+                        <div class="stat-label">Active Operations</div>
                     </div>
-                    <div class="status-item">
-                        <span class="label">Life Forms Detected:</span>
-                        <span class="value" id="lifeforms">0</span>
+                    <div class="stat">
+                        <div class="stat-number">12</div>
+                        <div class="stat-label">Core Capabilities</div>
+                    </div>
+                    <div class="stat">
+                        <div class="stat-number">∞</div>
+                        <div class="stat-label">Scalability</div>
+                    </div>
+                </div>
+                <a href="#services" class="cta-button">Explore Capabilities</a>
+            </div>
+        </div>
+        <div class="scroll-indicator">
+            <div class="scroll-line"></div>
+        </div>
+    </section>
+
+    <!-- Operations Grid -->
+    <section class="operations" id="operations">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Operations</h2>
+                <p class="section-subtitle">Unified under one architect</p>
+            </div>
+            <div class="operations-grid">
+                <div class="operation-card">
+                    <div class="operation-icon">ANU</div>
+                    <h3 class="operation-name">ANU</h3>
+                    <p class="operation-desc">Brand identity · Visual systems · Asset libraries</p>
+                </div>
+                <div class="operation-card">
+                    <div class="operation-icon">Ki-Ra</div>
+                    <h3 class="operation-name">Ki-Ra Studios</h3>
+                    <p class="operation-desc">Game development · World-building · Interactive systems</p>
+                </div>
+                <div class="operation-card">
+                    <div class="operation-icon">KYX</div>
+                    <h3 class="operation-name">KYRAX</h3>
+                    <p class="operation-desc">Web design · UI/UX · Digital platforms</p>
+                </div>
+                <div class="operation-card">
+                    <div class="operation-icon">PLS</div>
+                    <h3 class="operation-name">PULSΞ</h3>
+                    <p class="operation-desc">Streaming · Broadcast · Overlay design</p>
+                </div>
+                <div class="operation-card">
+                    <div class="operation-icon">SCP</div>
+                    <h3 class="operation-name">SCOPU</h3>
+                    <p class="operation-desc">Systems architecture · Workflow optimization</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Core Services -->
+    <section class="services" id="services">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Core Capabilities</h2>
+                <p class="section-subtitle">From concept to deployment</p>
+            </div>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-number">01</div>
+                    <h3 class="service-title">Brand & Visual Systems</h3>
+                    <ul class="service-list">
+                        <li>Full identity systems & brand foundations</li>
+                        <li>Wordmark/logotype design</li>
+                        <li>Color doctrine & typography systems</li>
+                        <li>Multi-platform asset systems</li>
+                        <li>Brand guideline documentation</li>
+                    </ul>
+                    <div class="service-tag">ANU</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-number">02</div>
+                    <h3 class="service-title">Web Design & UI Systems</h3>
+                    <ul class="service-list">
+                        <li>Landing pages & business sites</li>
+                        <li>Responsive design systems</li>
+                        <li>Web UI/UX for dashboards & portals</li>
+                        <li>Interactive elements & animations</li>
+                        <li>SEO-ready & performance-tuned</li>
+                    </ul>
+                    <div class="service-tag">KYRAX</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-number">03</div>
+                    <h3 class="service-title">Systems Architecture</h3>
+                    <ul class="service-list">
+                        <li>Workflow mapping & SOP creation</li>
+                        <li>AI-assisted production pipelines</li>
+                        <li>Process documentation</li>
+                        <li>Scalable service system design</li>
+                        <li>Operational efficiency planning</li>
+                    </ul>
+                    <div class="service-tag">SCOPU</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-number">04</div>
+                    <h3 class="service-title">Game Development & World-Building</h3>
+                    <ul class="service-list">
+                        <li>Unity & Unreal Engine workflows</li>
+                        <li>Game-ready asset creation</li>
+                        <li>Mobile game prototyping</li>
+                        <li>HUD/UI systems for games</li>
+                        <li>Canon documentation & lore systems</li>
+                    </ul>
+                    <div class="service-tag">Ki-Ra Studios</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-number">05</div>
+                    <h3 class="service-title">Streaming & Broadcast Design</h3>
+                    <ul class="service-list">
+                        <li>OBS scene architecture</li>
+                        <li>Overlay & HUD style UI</li>
+                        <li>Stream branding packages</li>
+                        <li>Animated overlays & alerts</li>
+                        <li>Creator-focused visual systems</li>
+                    </ul>
+                    <div class="service-tag">PULSΞ</div>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-number">06</div>
+                    <h3 class="service-title">AI-Enhanced Workflows</h3>
+                    <ul class="service-list">
+                        <li>Prompt engineering frameworks</li>
+                        <li>Brand-consistent AI visuals</li>
+                        <li>Rapid concept iteration</li>
+                        <li>Task automation using AI tools</li>
+                        <li>Custom AI operational agents</li>
+                    </ul>
+                    <div class="service-tag">All Operations</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- The Standard -->
+    <section class="standard" id="standard">
+        <div class="container">
+            <div class="standard-content">
+                <div class="standard-label">The Standard</div>
+                <h2 class="standard-title">Technology is a force multiplier, not a crutch.</h2>
+                <div class="standard-grid">
+                    <div class="standard-principle">
+                        <h4>AI is not a replacement for thought</h4>
+                        <p>We leverage AI to extend human intent, not replace creative judgment.</p>
+                    </div>
+                    <div class="standard-principle">
+                        <h4>Automation is not an excuse for laziness</h4>
+                        <p>We automate to remove friction and preserve focus on what matters.</p>
+                    </div>
+                    <div class="standard-principle">
+                        <h4>We remain accountable for outcomes</h4>
+                        <p>Technology increases leverage. We take responsibility for results.</p>
+                    </div>
+                </div>
+                <div class="standard-manifesto">
+                    <p>We use technology to:</p>
+                    <ul>
+                        <li>Extend human intent</li>
+                        <li>Remove friction</li>
+                        <li>Increase leverage</li>
+                        <li>Preserve focus</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- What Makes Us Different -->
+    <section class="differentiators">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">What Makes SATCORP Different</h2>
+            </div>
+            <div class="diff-grid">
+                <div class="diff-item">
+                    <div class="diff-icon">◆</div>
+                    <h4>Concierge-Level Execution</h4>
+                    <p>White-glove service from scope to delivery</p>
+                </div>
+                <div class="diff-item">
+                    <div class="diff-icon">◆</div>
+                    <h4>Brand + Systems in One</h4>
+                    <p>Unified creative and technical architecture</p>
+                </div>
+                <div class="diff-item">
+                    <div class="diff-icon">◆</div>
+                    <h4>Hardware-Accelerated Speed</h4>
+                    <p>RTX workflows for rapid iteration</p>
+                </div>
+                <div class="diff-item">
+                    <div class="diff-icon">◆</div>
+                    <h4>World-Class Polish</h4>
+                    <p>Professional presentation standards</p>
+                </div>
+                <div class="diff-item">
+                    <div class="diff-icon">◆</div>
+                    <h4>Modular & Scalable</h4>
+                    <p>Built for long-term growth</p>
+                </div>
+                <div class="diff-item">
+                    <div class="diff-icon">◆</div>
+                    <h4>Clear Communication</h4>
+                    <p>Structured delivery & revision control</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Process -->
+    <section class="process">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">The Concierge Process</h2>
+                <p class="section-subtitle">Clarity → Scope → Execution → Polish</p>
+            </div>
+            <div class="process-steps">
+                <div class="process-step">
+                    <div class="step-number">01</div>
+                    <h3>Clarify</h3>
+                    <p>Goal definition, constraints, and expectation alignment</p>
+                </div>
+                <div class="process-arrow">→</div>
+                <div class="process-step">
+                    <div class="step-number">02</div>
+                    <h3>Scope</h3>
+                    <p>Deliverable alignment, timeline setting, revision control</p>
+                </div>
+                <div class="process-arrow">→</div>
+                <div class="process-step">
+                    <div class="step-number">03</div>
+                    <h3>Execute</h3>
+                    <p>Production with checkpoints and milestone reviews</p>
+                </div>
+                <div class="process-arrow">→</div>
+                <div class="process-step">
+                    <div class="step-number">04</div>
+                    <h3>Polish</h3>
+                    <p>Export optimization, packaging, and structured handoff</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Ideal Clients -->
+    <section class="clients">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Ideal Clients</h2>
+            </div>
+            <div class="clients-grid">
+                <div class="client-card">
+                    <h4>Founders & Small Businesses</h4>
+                    <p>Building brand identity and operational systems from the ground up</p>
+                </div>
+                <div class="client-card">
+                    <h4>Creators & Streamers</h4>
+                    <p>Establishing professional visual presence and broadcast systems</p>
+                </div>
+                <div class="client-card">
+                    <h4>Professional Services</h4>
+                    <p>Elevating brand perception with polished digital presence</p>
+                </div>
+                <div class="client-card">
+                    <h4>Long-Term Brand Builders</h4>
+                    <p>Seeking consistency, scalability, and strategic creative partnership</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="contact-content">
+                <h2 class="contact-title">Ready to Engage?</h2>
+                <p class="contact-subtitle">Let's translate your vision into deployable assets</p>
+                <div class="contact-methods">
+                    <a href="#" class="contact-button">Schedule Consultation</a>
+                    <a href="#" class="contact-button contact-button-secondary">View Portfolio</a>
+                </div>
+                <div class="contact-note">
+                    <p>Pre-order vetting · Clear timelines · Security-first communication</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <div class="footer-logo">SATCORP</div>
+                    <p class="footer-tagline">Concierge Creative Operations</p>
+                </div>
+                <div class="footer-operations">
+                    <h4>Operations</h4>
+                    <ul>
+                        <li>ANU</li>
+                        <li>Ki-Ra Studios</li>
+                        <li>KYRAX</li>
+                        <li>PULSΞ</li>
+                        <li>SCOPU</li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#operations">Operations</a></li>
+                        <li><a href="#standard">The Standard</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2026 SATCORP. All rights reserved.</p>
+                <p class="footer-disclaimer">New modules, systems, and refinements are continuously introduced as projects evolve.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>                        <span class="value" id="lifeforms">0</span>
                     </div>
                     <div class="status-item">
                         <span class="label">Distance to Mothership:</span>
