--- a/index.html
+++ b/index.html
@@ -3,327 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SATCORP — Concierge Systems & Creative Operations</title>
+    <title>SATCORP | Concierge Operator</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="nav">
-        <div class="nav-container">
-            <div class="logo">SATCORP</div>
-            <ul class="nav-menu">
-                <li><a href="#services">Services</a></li>
-                <li><a href="#operations">Operations</a></li>
-                <li><a href="#standard">The Standard</a></li>
-                <li><a href="#contact" class="btn-primary">Engage</a></li>
-            </ul>
-            <div class="menu-toggle">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
+    <div class="scanline"></div>
+    
+    <nav class="sidebar">
+        <div class="logo">SATCORP</div>
+        <ul class="nav-links">
+            <li class="active" data-target="core">01_IDENTITY</li>
+            <li data-target="brand">02_VISUALS</li>
+            <li data-target="web">03_SYSTEMS</li>
+            <li data-target="dev">04_ENGINE</li>
+        </ul>
+        <div class="status-bar">
+            <p>SYSTEM: ONLINE</p>
+            <p>OP: ANU</p>
         </div>
     </nav>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <div class="hero-label">CONCIERGE SYSTEMS ARCHITECTURE</div>
-            <h1 class="hero-title">End-to-End<br>Problem Solving</h1>
-            <p class="hero-subtitle">Translating vision into deployable assets.<br>Brand · Systems · Execution · Scale.</p>
-            <div class="hero-cta">
-                <a href="#contact" class="btn-hero">Start a Project</a>
-                <a href="#services" class="btn-secondary">Explore Capabilities</a>
-            </div>
-        </div>
-        <div class="scroll-indicator">
-            <span>Scroll</span>
-            <div class="scroll-line"></div>
-        </div>
-    </section>
-
-    <!-- Operations Banner -->
-    <section class="operations-banner">
-        <div class="operations-marquee">
-            <div class="marquee-content">
-                <span>ANU·Ki-Ra Studios</span>
-                <span class="dot">·</span>
-                <span>KYRAX</span>
-                <span class="dot">·</span>
-                <span>PULSΞ</span>
-                <span class="dot">·</span>
-                <span>SCOPU</span>
-                <span class="dot">·</span>
-            </div>
-            <div class="marquee-content" aria-hidden="true">
-                <span>ANU·Ki-Ra Studios</span>
-                <span class="dot">·</span>
-                <span>KYRAX</span>
-                <span class="dot">·</span>
-                <span>PULSΞ</span>
-                <span class="dot">·</span>
-                <span>SCOPU</span>
-                <span class="dot">·</span>
-            </div>
-        </div>
-    </section>
-
-    <!-- Core Value Proposition -->
-    <section class="core-value">
-        <div class="container">
-            <div class="value-grid">
-                <div class="value-item">
-                    <div class="value-number">01</div>
-                    <h3>Concierge-Level Execution</h3>
-                    <p>Client-first model. Clarity → Scope → Execution → Polish. No vague handoffs.</p>
+    <main class="content">
+        <section id="core" class="module active">
+            <header>
+                <h2 class="glitch" data-text="SYSTEM ARCHITECT">SYSTEM ARCHITECT</h2>
+                <p class="subtitle">Concierge-Level Execution | Creative Operations</p>
+            </header>
+            <div class="grid-container">
+                <div class="card">
+                    <h3>THE CONCIERGE MODEL</h3>
+                    <p>Translating vague ideas into deployable assets. Clarity. Scope. Execution. Polish.</p>
                 </div>
-                <div class="value-item">
-                    <div class="value-number">02</div>
-                    <h3>Brand + Systems Unified</h3>
-                    <p>Identity meets infrastructure. Design that scales with operational intelligence.</p>
-                </div>
-                <div class="value-item">
-                    <div class="value-number">03</div>
-                    <h3>Hardware-Accelerated Speed</h3>
-                    <p>High-performance workstation workflows. RTX-driven iteration. Rapid deployment.</p>
+                <div class="card highlight">
+                    <h3>OPERATOR VALUE</h3>
+                    <p>End-to-end problem solver bridging design, automation, and high-performance workflows.</p>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title">Complete Skill Deck</h2>
-                <p class="section-subtitle">Modular capabilities engineered for long-term growth</p>
+        <section id="brand" class="module">
+            <h2>BRAND & VISUAL SYSTEMS</h2>
+            <div class="skill-grid">
+                <div class="skill-item">Modular Design Frameworks</div>
+                <div class="skill-item">Color Doctrine</div>
+                <div class="skill-item">Multi-Platform Assets</div>
+                <div class="skill-item">Identity Extensions</div>
             </div>
+        </section>
 
-            <div class="services-grid">
-                <!-- Brand & Visual Systems -->
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <rect x="8" y="8" width="24" height="24" stroke="currentColor" stroke-width="2"/>
-                            <path d="M16 16L24 24M24 16L16 24" stroke="currentColor" stroke-width="2"/>
-                        </svg>
-                    </div>
-                    <h3 class="service-title">Brand & Visual Systems</h3>
-                    <p class="service-description">Full identity systems. Wordmark design. Color doctrine. Typography systems. Brand guidelines. Multi-platform asset systems.</p>
-                    <ul class="service-features">
-                        <li>Logo & identity design</li>
-                        <li>Brand books & style guides</li>
-                        <li>Social media asset kits</li>
-                        <li>Print collateral systems</li>
-                    </ul>
-                </div>
-
-                <!-- Web Design & UI -->
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <rect x="6" y="10" width="28" height="20" stroke="currentColor" stroke-width="2"/>
-                            <path d="M6 16H34" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="10" cy="13" r="1" fill="currentColor"/>
-                            <circle cx="14" cy="13" r="1" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3 class="service-title">Web Design & UI Systems</h3>
-                    <p class="service-description">Landing pages. Portfolios. Business sites. Dashboards. Responsive design systems with dark/light modes and custom animations.</p>
-                    <ul class="service-features">
-                        <li>HTML · CSS · JS · React</li>
-                        <li>GSAP animations</li>
-                        <li>SEO-ready architecture</li>
-                        <li>Hosting & deployment</li>
-                    </ul>
-                </div>
-
-                <!-- Systems Architecture -->
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <rect x="8" y="8" width="10" height="10" stroke="currentColor" stroke-width="2"/>
-                            <rect x="22" y="8" width="10" height="10" stroke="currentColor" stroke-width="2"/>
-                            <rect x="8" y="22" width="10" height="10" stroke="currentColor" stroke-width="2"/>
-                            <rect x="22" y="22" width="10" height="10" stroke="currentColor" stroke-width="2"/>
-                            <path d="M18 13H22M13 18V22M27 18V22M18 27H22" stroke="currentColor" stroke-width="2"/>
-                        </svg>
-                    </div>
-                    <h3 class="service-title">Systems Architecture</h3>
-                    <p class="service-description">Workflow mapping. SOP creation. AI-assisted pipelines. Process documentation. Operational efficiency planning.</p>
-                    <ul class="service-features">
-                        <li>Digital process mapping</li>
-                        <li>Workflow optimization</li>
-                        <li>Backend logic planning</li>
-                        <li>Scalable service design</li>
-                    </ul>
-                </div>
-
-                <!-- Game Development -->
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <path d="M10 16C10 13 12 10 16 10H24C28 10 30 13 30 16V24C30 27 28 30 24 30H16C12 30 10 27 10 24V16Z" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="16" cy="20" r="2" fill="currentColor"/>
-                            <circle cx="26" cy="16" r="1.5" fill="currentColor"/>
-                            <circle cx="26" cy="24" r="1.5" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3 class="service-title">Game Development & World-Building</h3>
-                    <p class="service-description">Unity & Unreal workflows. Game-ready assets. MODs. Interactive prototypes. HUD/UI systems. World documentation.</p>
-                    <ul class="service-features">
-                        <li>Blender modeling pipelines</li>
-                        <li>Mobile-first game builds</li>
-                        <li>Canon documentation</li>
-                        <li>Cinematic key art</li>
-                    </ul>
-                </div>
-
-                <!-- AI-Enhanced Workflows -->
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <circle cx="20" cy="20" r="12" stroke="currentColor" stroke-width="2"/>
-                            <path d="M20 14V20L24 24" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                            <circle cx="20" cy="8" r="2" fill="currentColor"/>
-                            <circle cx="20" cy="32" r="2" fill="currentColor"/>
-                            <circle cx="8" cy="20" r="2" fill="currentColor"/>
-                            <circle cx="32" cy="20" r="2" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3 class="service-title">AI-Enhanced Creative Workflows</h3>
-                    <p class="service-description">Prompt engineering. Brand-consistent AI visuals. Rapid concept iteration. Task automation. Custom AI personas.</p>
-                    <ul class="service-features">
-                        <li>Style-locked AI pipelines</li>
-                        <li>Reusable prompt frameworks</li>
-                        <li>Operational AI agents</li>
-                        <li>Accelerated execution</li>
-                    </ul>
-                </div>
-
-                <!-- Streaming & Broadcast -->
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                            <rect x="8" y="12" width="24" height="16" rx="2" stroke="currentColor" stroke-width="2"/>
-                            <circle cx="20" cy="20" r="4" stroke="currentColor" stroke-width="2"/>
-                            <path d="M4 20H8M32 20H36" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                        </svg>
-                    </div>
-                    <h3 class="service-title">Streaming & Broadcast Design</h3>
-                    <p class="service-description">OBS scene architecture. Overlay design. Alert systems. Stream branding packages. Creator-focused visual kits.</p>
-                    <ul class="service-features">
-                        <li>Custom overlay packages</li>
-                        <li>Animated alert systems</li>
-                        <li>TikTok/live visual kits</li>
-                        <li>Scene layout architecture</li>
-                    </ul>
-                </div>
+        <section id="web" class="module">
+            <h2>WEB & UI ARCHITECTURE</h2>
+            <div class="tech-stack">
+                <span>HTML/CSS/JS</span>
+                <span>GSAP</span>
+                <span>REACT</span>
+                <span>VANTA.JS</span>
             </div>
-        </div>
-    </section>
+            <p class="description">Performance-tuned dashboards and responsive design systems built for scalability.</p>
+        </section>
+    </main>
 
-    <!-- The Standard -->
-    <section id="standard" class="standard">
-        <div class="container">
-            <div class="standard-content">
-                <h2 class="standard-title">The Standard</h2>
-                <div class="standard-statement">
-                    <p class="lead">Technology is a force multiplier, not a crutch.</p>
-                    <p>AI is not a replacement for thought.<br>Automation is not an excuse for laziness.</p>
-                </div>
-                <div class="standard-principles">
-                    <div class="principle">
-                        <span class="principle-icon">→</span>
-                        <span>Extend human intent</span>
-                    </div>
-                    <div class="principle">
-                        <span class="principle-icon">→</span>
-                        <span>Remove friction</span>
-                    </div>
-                    <div class="principle">
-                        <span class="principle-icon">→</span>
-                        <span>Increase leverage</span>
-                    </div>
-                    <div class="principle">
-                        <span class="principle-icon">→</span>
-                        <span>Preserve focus</span>
-                    </div>
-                </div>
-                <p class="standard-footer">We remain accountable for outcomes.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Ideal Clients -->
-    <section class="ideal-clients">
-        <div class="container">
-            <h2 class="section-title">Built For</h2>
-            <div class="clients-grid">
-                <div class="client-type">
-                    <h3>Founders & Small Businesses</h3>
-                    <p>Seeking brand clarity and operational infrastructure</p>
-                </div>
-                <div class="client-type">
-                    <h3>Creators & Streamers</h3>
-                    <p>Building professional broadcast systems and visual identity</p>
-                </div>
-                <div class="client-type">
-                    <h3>Professional Services</h3>
-                    <p>Requiring long-term consistency and scalable systems</p>
-                </div>
-                <div class="client-type">
-                    <h3>Brands in Growth Mode</h3>
-                    <p>Need modular frameworks that scale with ambition</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact CTA -->
-    <section id="contact" class="contact-cta">
-        <div class="container">
-            <div class="cta-content">
-                <h2>Ready to Execute?</h2>
-                <p>Let's clarify your goal, align scope, and build something exceptional.</p>
-                <div class="cta-buttons">
-                    <a href="mailto:contact@satcorp.com" class="btn-hero">Start a Conversation</a>
-                    <a href="#services" class="btn-secondary">Review Capabilities</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-brand">
-                    <div class="logo">SATCORP</div>
-                    <p>Concierge Systems & Creative Operations</p>
-                </div>
-                <div class="footer-operations">
-                    <h4>Operations</h4>
-                    <ul>
-                        <li>ANU·Ki-Ra Studios</li>
-                        <li>KYRAX</li>
-                        <li>PULSΞ</li>
-                        <li>SCOPU</li>
-                    </ul>
-                </div>
-                <div class="footer-contact">
-                    <h4>Engage</h4>
-                    <ul>
-                        <li><a href="mailto:contact@satcorp.com">contact@satcorp.com</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#standard">The Standard</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 SATCORP. All systems operational.</p>
-            </div>
+    <footer class="terminal-footer">
+        <div class="terminal-input">
+            <span class="prompt">></span> <span id="typed">Awaiting command...</span>
         </div>
     </footer>
 
